[gd_scene load_steps=7 format=3 uid="uid://cvvpsibti0lcp"]

[ext_resource type="Script" uid="uid://0rd3jn7cbn0d" path="res://Scripts/Player.gd" id="1_lu7l2"]
[ext_resource type="Script" uid="uid://d03saohuysxmw" path="res://Scripts/SmoothCameraArm.gd" id="2_nj4ej"]
[ext_resource type="PackedScene" uid="uid://cl8p71ouiyvu2" path="res://GameObjects/Rig.tscn" id="3_0yq7s"]
[ext_resource type="Script" uid="uid://ckms4wc7aqh42" path="res://Scripts/AttackRayCast.gd" id="4_hwx2g"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lu7l2"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_lu7l2"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_lu7l2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_lu7l2")

[node name="SmoothCameraArm" type="SpringArm3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(1, 0, 0, 0, 0.90630776, 0.42261827, 0, -0.42261827, 0.90630776, 0, 0.316, 0)
shape = SubResource("SeparationRayShape3D_lu7l2")
spring_length = 4.0
script = ExtResource("2_nj4ej")
target = NodePath("../HorizontalPivot/VerticalPivot")

[node name="Camera3D" type="Camera3D" parent="SmoothCameraArm"]
transform = Transform3D(1, 0, 0, 0, 0.99158114, -0.12948793, 0, 0.12948793, 0.99158114, 0, 0, 0)

[node name="HorizontalPivot" type="Node3D" parent="."]

[node name="VerticalPivot" type="Node3D" parent="HorizontalPivot"]

[node name="RigPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="Rig" parent="RigPivot" instance=ExtResource("3_0yq7s")]

[node name="Skeleton3D" parent="RigPivot/Rig/CharacterRig/GameRig" index="0"]
bones/0/position = Vector3(0.025293278, 0.892311, -0.019726235)
bones/1/rotation = Quaternion(-0.05216967, 0.0006194202, 0.008612197, 0.9986009)
bones/2/rotation = Quaternion(0.01505198, -0.0029443605, -0.025828123, 0.9995488)
bones/3/position = Vector3(-1.948303e-09, 0.19070055, -1.7581186e-08)
bones/3/rotation = Quaternion(-0.1715148, -0.004771579, 0.02737819, 0.9847895)
bones/4/rotation = Quaternion(0.3481843, -0.0040720813, -0.039241258, 0.9365957)
bones/6/rotation = Quaternion(-0.17685692, 0.01363616, 0.027753873, 0.98375076)
bones/7/position = Vector3(0.025293246, 0.8923109, -0.019726127)
bones/8/position = Vector3(0.025293227, 0.8923109, -0.01972618)
bones/9/position = Vector3(0.15643695, 0.95806277, -0.004701538)
bones/9/rotation = Quaternion(0.9864472, -0.0164493, -0.030883696, 0.16030435)
bones/10/position = Vector3(-1.6977959e-08, 0.26547724, -2.0097492e-08)
bones/10/rotation = Quaternion(-7.855122e-09, -0.006017848, 1.1570276e-08, 0.9999819)
bones/11/position = Vector3(-9.359276e-09, 0.2654772, 4.6190877e-08)
bones/11/rotation = Quaternion(0.429612, -0.0058640162, 0.004075958, 0.90298533)
bones/12/position = Vector3(5.1994586e-09, 0.22548708, 3.0580576e-08)
bones/12/rotation = Quaternion(-1.389473e-08, 0.0075881802, 2.9617917e-08, 0.9999713)
bones/13/position = Vector3(-1.5085575e-08, 0.22548708, -2.3174698e-09)
bones/13/rotation = Quaternion(-0.7361233, 0.031825215, -0.02102129, 0.6757721)
bones/15/position = Vector3(-0.10585042, 0.9580628, -0.004701555)
bones/15/rotation = Quaternion(0.97791207, -0.019581571, 0.025894599, 0.20648003)
bones/16/position = Vector3(-8.121962e-09, 0.2640531, -2.0533356e-08)
bones/16/rotation = Quaternion(-1.8421119e-08, 0.0012763883, -6.7994934e-09, 0.9999992)
bones/17/position = Vector3(9.70999e-09, 0.26405326, -1.4483831e-08)
bones/17/rotation = Quaternion(0.6149301, 0.0015270516, 0.00029819628, 0.7885801)
bones/18/position = Vector3(5.3455316e-09, 0.22387184, 3.5217307e-09)
bones/18/rotation = Quaternion(-4.0639947e-08, -0.010001635, 5.7391745e-09, 0.99995005)
bones/19/position = Vector3(-5.0379505e-09, 0.22387181, 6.4813985e-09)
bones/19/rotation = Quaternion(-0.645889, -0.03168547, 0.002571049, 0.7627692)
bones/21/position = Vector3(0.04672084, 1.4025759, 0.096924655)
bones/21/rotation = Quaternion(-0.45549712, -0.26763886, -0.41415885, 0.74119115)
bones/22/position = Vector3(0.21251191, 1.4462188, 0.04226244)
bones/22/rotation = Quaternion(-0.063441955, -0.076778024, 0.9798874, -0.17291893)
bones/23/rotation = Quaternion(1.2840135e-08, -0.05916192, 1.45753845e-08, 0.99824846)
bones/24/rotation = Quaternion(0.5000364, -0.072696455, -0.18332024, 0.84325117)
bones/25/rotation = Quaternion(5.270623e-08, 0.016837921, 2.643962e-08, 0.9998583)
bones/26/rotation = Quaternion(0.010274315, 0.01670407, -0.15754943, 0.98731637)
bones/46/position = Vector3(0.010252552, 1.4018956, 0.096519426)
bones/46/rotation = Quaternion(-0.46640947, 0.24700071, 0.42087027, 0.7377813)
bones/47/position = Vector3(-0.15503795, 1.4395206, 0.035841685)
bones/47/rotation = Quaternion(0.004051216, -0.14064874, 0.97444516, 0.17509486)
bones/48/rotation = Quaternion(-5.4014e-08, 0.07502663, -1.16060924e-07, 0.9971816)
bones/49/rotation = Quaternion(0.54013723, 0.094168454, 0.21243705, 0.8088601)
bones/50/rotation = Quaternion(-1.15105685e-07, -0.011038831, -1.1988317e-07, 0.9999391)
bones/51/rotation = Quaternion(-0.016280347, -0.010789997, 0.0035058646, 0.99980307)
bones/71/position = Vector3(0.15083386, 1.3335371, 0.019336782)
bones/71/rotation = Quaternion(-0.009213075, 0.55748427, 0.83011556, -0.005893052)
bones/72/position = Vector3(-0.0896259, 1.3290519, 0.016664896)
bones/72/rotation = Quaternion(-0.009213072, 0.5574843, 0.8301155, -0.0058930526)

[node name="RightHandBone" parent="RigPivot/Rig" index="2"]
transform = Transform3D(-0.9942999, -0.04392144, -0.09715405, -0.05000385, -0.6126929, 0.7887378, -0.09416811, 0.78909993, 0.60700387, -0.26707256, 1.0323831, 0.16289392)

[node name="LeftHandBone" parent="RigPivot/Rig" index="3"]
transform = Transform3D(-0.9284299, -0.36765197, -0.053388417, 0.17178112, -0.55226135, 0.8157809, -0.32940793, 0.7482243, 0.5758913, 0.29678452, 1.031066, 0.20681205)

[node name="RayCastBoneAttachment" type="BoneAttachment3D" parent="RigPivot/Rig"]
transform = Transform3D(-0.9942999, -0.04392144, -0.09715405, -0.05000385, -0.6126929, 0.7887378, -0.09416811, 0.78909993, 0.60700387, -0.26707256, 1.0323831, 0.16289392)
bone_name = "DEF-hand.R"
bone_idx = 51
use_external_skeleton = true
external_skeleton = NodePath("../CharacterRig/GameRig/Skeleton3D")

[node name="AttackRayCast" type="RayCast3D" parent="RigPivot/Rig/RayCastBoneAttachment"]
unique_name_in_owner = true
transform = Transform3D(-0.13543418, -0.24497953, 0.96002215, 0.9899943, 0.0052752257, 0.1410086, -0.039608564, 0.96951365, 0.24181396, -0.013728738, 0.088065386, -0.0448094)
target_position = Vector3(0, 1, 0)
script = ExtResource("4_hwx2g")

[editable path="RigPivot/Rig"]
[editable path="RigPivot/Rig/CharacterRig"]
